Fixed image spacing on reviews

--- a/styles/style.css
+++ b/styles/style.css
@@ -145,8 +145,7 @@ h1 {
 }
 
 .card-image {
-    height:auto;
-    width: auto;
+    height: auto;
 }
 
 .position-relative {
